--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -29,3 +29,13 @@
 .fs-21px{
   font-size: 21px;
 }
+
+.btn {
+    height: 36px!important;
+    line-height: 36px!important;
+    font-size: 16px!important;
+}
+
+.btn-margin{
+    margin: 0 3px;
+}
